# thierry

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.dev.yml  mypy.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: code-quality.yml  codeql-analysis.yml  tests.yml
app/: Dockerfile.dev  manage.py
app/core/: __init__.py
app/core/types/: __init__.py  game_pass_api.py  youtube_data_api.py
app/core/utils/: __init__.py  game_pass_api.py  pagination.py  youtube_data_api.py
app/game/: admin.py  apps.py
app/game/management/commands/: fetch_game_pass.py
app/game/migrations/: 0001_initial.py
app/game/models/: __init__.py  category.py
app/script/: entrypoint.ci.sh  entrypoint.dev.sh
app/tests/core/: test_youtube_data_api.py
app/tests/youtube/models/: test_debrief_actu.py  test_tag.py  test_title.py
app/thierry/: asgi.py  settings.py  urls.py  wsgi.py
app/user/: admin.py  apps.py  models.py
app/user/migrations/: 0001_initial.py
app/youtube/: admin.py  apps.py  urls.py
app/youtube/management/commands/: updatedebriefs.py
app/youtube/migrations/: 0001_initial.py
app/youtube/models/: __init__.py  debrief_actu.py  tag.py  title.py
app/youtube/serializers/: __init__.py  debrief_serializer.py  tag_serializer.py  title_serializer.py
app/youtube/views/: __init__.py  all_videos.py
