# poetry
[tool.poetry]
name = "thierry"
version = "0.0.1"
description = "Jean Baptiste Show website backend"
authors = ["François Lavigne Marbach <developer@studiopixidream.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
djangorestframework-api-key = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# black
[tool.black]
line_length = "119"
target-version = ["py310"]
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
  |\.yml
  |\.md
  |\.lock
  |LICENSE
  |Dockerfile
)/
'''
