# poetry
[tool.poetry]
name = "thierry"
version = "0.0.1"
description = "Jean Baptiste Show website backend"
authors = ["François Lavigne Marbach <developer@studiopixidream.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
djangorestframework-api-key = "^2.2.0"
psycopg2-binary = "^2.9.3"
google-api-python-client = "^2.64.0"
google-auth-oauthlib = "^0.5.3"
google-auth-httplib2 = "^0.1.0"
isodate = "^0.6.1"
types-requests = "^2.28.11.5"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
pylint = "^2.15.3"
pre-commit = "^2.20.0"
pylint-django = "^2.5.3"
mypy = "^0.971"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# black
[tool.black]
line_length = "100"
target-version = ["py310"]
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
  |\.yml
  |\.md
  |\.lock
  |LICENSE
  |Dockerfile
)/
'''
